--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.1",
   "description": "Zero-ceremony dependency injection for TypeScript. Full inference, no decorators, no tokens. Built-in introspection for AI tooling.",
   "type": "module",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
+      "types": "./dist/index.d.mts",
+      "default": "./dist/index.mjs"
     }
   },
   "files": [
@@ -16,7 +16,7 @@
     "!dist/*.map"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "tsdown",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -48,8 +48,9 @@
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/git": "^10.0.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "publint": "^0.3.17",
     "semantic-release": "^24.0.0",
-    "tsup": "^8.0.0",
+    "tsdown": "^0.20.3",
     "typescript": "^5.4.0",
     "vitest": "^3.0.0"
   }
