docs: add runnable examples and document module typing trade-off
- Add examples/ directory with 3 runnable TypeScript examples:
  01-web-service (lifecycle, scope, introspection, fuzzy error)
  02-modular-testing (modules via spread, test overrides, runtime safety net)
  03-plugin-system (extend chain, scoped jobs, JSON graph for LLM)
- Document the deliberate `c: any` trade-off for separate modules
  (zero ceremony over compile-time typing, compensated by runtime diagnostics)
- Reframe duplicate key detection as primarily internal via health().warnings
- Add npm scripts: example:web, example:test, example:plugin
- Update llms.txt and llms-full.txt to match

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "lint": "tsc --noEmit",
+    "example:web": "tsx examples/01-web-service.ts",
+    "example:test": "tsx examples/02-modular-testing.ts",
+    "example:plugin": "tsx examples/03-plugin-system.ts",
     "prepublishOnly": "npm run build"
   },
   "publishConfig": {
