feat: add module() post-build composition + architecture refactor
- Add `module()` on Container for post-build typed composition via builder
- Extract ContainerBuilder (from create-container) and container-proxy (scope/extend/module inline)
- Inject builder factory to avoid circular imports (dependency inversion)
- Add 'module' to RESERVED_KEYS, update IContainer type signature
- Add 9 tests for module() (chaining, scope, extend, transient, cache sharing)
- Update example 04 with post-build module() demo
- Update README, llms.txt, llms-full.txt with module() documentation

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "example:web": "tsx examples/01-web-service.ts",
     "example:test": "tsx examples/02-modular-testing.ts",
     "example:plugin": "tsx examples/03-plugin-system.ts",
+    "example:modules": "tsx examples/04-modules.ts",
     "prepublishOnly": "npm run build"
   },
   "publishConfig": {
