fix(lint): resolve all Biome warnings and format errors
Disable noExplicitAny and noUnusedFunctionParameters for tests/examples
in biome.json overrides, remove unused imports across test files, and
fix JSON formatting in .releaserc.json.

--- a/biome.json
+++ b/biome.json
@@ -50,7 +50,11 @@
       "linter": {
         "rules": {
           "suspicious": {
-            "noConsole": "off"
+            "noConsole": "off",
+            "noExplicitAny": "off"
+          },
+          "correctness": {
+            "noUnusedFunctionParameters": "off"
           }
         }
       }
